# CRplusplus

./: .gitattributes  .gitignore  CMakeLists.txt  Meeting-notes.md  README.md  defaultMap.txt
assets/Cards and Decks/: decks.hpp  spells.hpp  units.hpp
doc/: Grid.md  issues.md
libs/: readme.md
plan/: readme.md
src/: main.cpp
src/entities/: Building.hpp  DefaultTower.cpp  DefaultTower.hpp  Entity.hpp  Projectile.hpp  Spell.hpp  TestUnit.hpp  Tower.cpp  Tower.hpp  Unit.cpp  Unit.hpp
src/game/: Combat.hpp  Grid.cpp  Grid.hpp  Map.cpp  Map.hpp  Match.cpp  Match.hpp  PathFinder.hpp  Renderer.hpp  Tile.hpp  Timer.hpp
src/players/: AI.cpp  AI.hpp  Card.cpp  Card.hpp  Deck.cpp  Deck.hpp  Hand.cpp  Hand.hpp  Player.cpp  Player.hpp  SpellCard.cpp  SpellCard.hpp  UnitCard.cpp  UnitCard.hpp  spell.cpp  spell.hpp  unit.cpp  unit.hpp
src/ui/: CardRenderer.cpp  CardRenderer.hpp  EndState.cpp  EndState.hpp  GameState.hpp  HUD.hpp  MatchState.cpp  MatchState.hpp  MenuState.cpp  MenuState.hpp  PauseState.cpp  PauseState.hpp
tests/: CMakeLists.txt  GridTests.cpp  MapTests.cpp  MatchTests.cpp  UnitTests.cpp  tests.md
